# RustyBin

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: main.rs
src/api/: actuator.rs  file.rs  mod.rs
src/repository/: config.rs  storage.rs
