[package]
name = "rusty_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
serde_yaml = "0.9.19"
serde = {version = "1.0.157", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
num_cpus = "1.14.0"
sanitize-filename = "0.4.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
